Fixed Box Responsive Issue - Fixed Twitter Overlapping issue

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body{
 .container {
   display: grid;
   height: 100%;
-  grid-template: 50px 250px auto 75px / repeat(12, 1fr);
+  grid-template: 50px 250px auto auto 75px / repeat(12, 1fr);
 }
 .header {
   background-color: white;
@@ -27,10 +27,20 @@ html, body{
   grid-column: 1 / -1;
   grid-row: 3 / 4;
 }
+.twitter_100daysofcode {
+  grid-column: 1 / -1;
+  grid-row: 4 / 5;
+  align-items: center;
+  background-image: radial-gradient(#64a6f9, #64a6f9);
+  grid-template-rows: repeat(1, 1fr);
+  grid-auto-rows: 50px;
+  margin: 0px;
+  justify-items: center;
+}
 .footer {
   background-color: #323a77f2;
   grid-column: 1 / -1;
-  grid-row: 4 / -1;
+  grid-row: 5 / -1;
 }
 
 /* -- - --- - --- --- --- -- */
@@ -39,7 +49,7 @@ html, body{
   display: grid;
   grid-gap: 50px;
   margin: 50px;
-  grid-template-columns: repeat(3, minmax(500px, 1fr));
+  grid-template-columns: repeat(3, minmax(100px, 1fr));
   grid-template-rows: repeat(1, minmax(100px, auto-fit));
 }
 .projects_container > div {
@@ -59,15 +69,16 @@ html, body{
 .projects_container {
   display: grid;
   grid-template-columns: repeat(1, minmax(150px, 1fr));
+  grid-template-rows: repeat(3, minmax(100px, 1fr));
   grid-gap: 10px;
-  margin: 55px;
+  margin: 20px;
   }
   .projects_container > * > p {
     font-size: 0.5em;
   }
   h1 {
     text-align: center;
-    color: white;
+
   }
 }
 /* -- - --- - --- --- --- -- */
@@ -121,16 +132,6 @@ html, body{
   margin: 10px;
 }
 
-.twitter_100daysofcode {
-  display: grid;
-  grid-template-columns: 1 / -1;
-  align-items: center;
-  background-image: radial-gradient(#64a6f9, #64a6f9);
-  grid-row: 3 / 4;
-    margin: 0px;
-    border: 1px solid black;
-    justify-items: center;
-}
 .twitter_100daysofcode > div {
   color: black;
 }
@@ -141,6 +142,9 @@ p {
   font-weight: 700;
   font-size: .9em;
   text-align: center;
+}
+h1{
+  color: white;
 }
 .project {
   font-size: 2em;
